--- a/superlists/lists/templates/home.html
+++ b/superlists/lists/templates/home.html
@@ -6,12 +6,14 @@
 
 <body>
     <h1>Your To-Do list</h1>
-    <form method=”POST”>
-        <input name="item_text" id="id_new_item" placeholder="Enter a to-do item" />
+    <form action="" method="POST">
         {% csrf_token %}
+        <input name="item_text" id="id_new_item" placeholder="Enter a to-do item" />
     </form>
     <table id="id_list_table">
-        <tr><td>1: {{ new_item_text }}</td></tr>
+        {% for item in items %}
+            <tr><td>{{ forloop.counter }}: {{ item.text }}</td></tr>
+        {% endfor %}
     </table>
 </body>
 
