--- a/superlists/lists/templates/list.html
+++ b/superlists/lists/templates/list.html
@@ -6,12 +6,12 @@
 
 <body>
     <h1>Your To-Do list</h1>
-    <form action="/lists/new" method="POST">
+    <form action="/lists/{{ list.id }}/add_item" method="POST">
         {% csrf_token %}
         <input name="item_text" id="id_new_item" placeholder="Enter a to-do item" />
     </form>
     <table id="id_list_table">
-        {% for item in items %}
+        {% for item in list.item_set.all %}
             <tr><td>{{ forloop.counter }}: {{ item.text }}</td></tr>
         {% endfor %}
     </table>
