--- a/superlists/lists/templates/home.html
+++ b/superlists/lists/templates/home.html
@@ -7,8 +7,10 @@
 <body>
     <h1>Start a new To-Do list</h1>
     <form action="/lists/new" method="POST">
-        {% csrf_token %}
+        <p style="text-align: center;">
         <input name="item_text" id="id_new_item" placeholder="Enter a to-do item" />
+        </p>
+        {% csrf_token %}
     </form>
 </body>
 
