--- a/superlists/lists/templates/list.html
+++ b/superlists/lists/templates/list.html
@@ -1,20 +1,13 @@
-<html>
+{% extends 'base.html' %}
 
-<head>
-    <title>To-Do lists</title>
-</head>
-
-<body>
-    <h1>Your To-Do list</h1>
-    <form action="/lists/{{ list.id }}/add_item" method="POST">
-        {% csrf_token %}
-        <input name="item_text" id="id_new_item" placeholder="Enter a to-do item" />
-    </form>
-    <table id="id_list_table">
-        {% for item in list.item_set.all %}
-            <tr><td>{{ forloop.counter }}: {{ item.text }}</td></tr>
-        {% endfor %}
-    </table>
-</body>
-
-</html>
+{% block header_text %}Your To-Do list{% endblock %}
+{% block form_action %}/lists/{{ list.id }}/add_item{% endblock %} 
+{% block table %}
+<table id="id_list_table">
+  {% for item in list.item_set.all %}
+  <tr>
+    <td>{{ forloop.counter }}: {{ item.text }}</td>
+  </tr>
+  {% endfor %}
+</table>
+{% endblock %}
