--- a/superlists/lists/templates/base.html
+++ b/superlists/lists/templates/base.html
@@ -23,6 +23,11 @@
                 placeholder="Enter a to-do item"
               />
               {% csrf_token %}
+              {% if error %}
+                <div class="form-group has-error">
+                  <span class="help-block">You can&#x27;t have an empty list item</span>
+                </div>
+              {% endif %}
             </form>
           </div>
         </div>
