--- a/superlists/lists/templates/base.html
+++ b/superlists/lists/templates/base.html
@@ -16,16 +16,11 @@
           <div class="text-center">
             <h1>{% block header_text %}{% endblock %}</h1>
             <form method="POST" action="{% block form_action %}{% endblock %}">
-              <input
-                name="item_text"
-                id="id_new_item"
-                class="form-control input-lg"
-                placeholder="Enter a to-do item"
-              />
+              {{ form.text }}
               {% csrf_token %}
-              {% if error %}
+              {% if form.errors %}
                 <div class="form-group has-error">
-                  <span class="help-block">You can&#x27;t have an empty list item</span>
+                  <span class="help-block">{{ form.text.errors }}</span>
                 </div>
               {% endif %}
             </form>
